--- a/gps/gps.vcxproj.filters
+++ b/gps/gps.vcxproj.filters
@@ -17,5 +17,9 @@
   <ItemGroup>
     <None Include="gps.ino" />
   </ItemGroup>
- 
+  <ItemGroup>
+    <ClInclude Include="__vm\.gps.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
